[package]
name = "rust-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
json = "0.12.4"
serde_json = "1.0.93"
clap = { version = "4.1.6", features = ["derive"] }
