[package]
name = "cubox-image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
json = "0.12.4"
serde_json = "1.0.93"
clap = { version = "4.1.6", features = ["derive"] }
openssl = { version = "0.10.45", features = ["vendored"] }

[profile.release]
lto = true
panic = "abort"
opt-level = "z"
debug = false
strip = true

[target.x86_64-unknown-linux-musl]
linker = "rust-lld"